--- a/app/views/common/navbar.scala.html
+++ b/app/views/common/navbar.scala.html
@@ -23,6 +23,18 @@ avbar-collapse-1" aria-expanded="false">
                             @Messages("AddItem")
                         </a>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
+                            @Messages("Ranking")
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="@routes.RankingController.want()">Wantランキング</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="@routes.RankingController.have()">Haveランキング</a></li>
+                        </ul>
+                    </li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
