--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -14,8 +14,8 @@
 </div>
 
 <div class="container">
-  @* 商品一覧を描画する *@
-  @views.html.items.items(currentUserOpt, items)
+  @* 変更する *@
+  @views.html.items.items(currentUserOpt, items.map((_, None)))
 </div>
 
 }
