--- a/app/views/items/buttons.scala.html
+++ b/app/views/items/buttons.scala.html
@@ -1,15 +1,29 @@
-@(index: Int, currentUser: User, item: Item)(implicit messagesProvider: MessagesProvider, flash: Flash, request: RequestHeader)
+@(index: Int, currentUser: User, item: Item, reload: Boolean = false)(implicit messagesProvider: MessagesProvider, flash: Flash, request: RequestHeader)
 
 <div class="buttons text-center">
+
     @if(item.wantUsers.exists(_.id == currentUser.id)) {
-    <buttion id="want@index" class="btn btn-success">Want</buttion>
+    <button id="want@index" class="btn btn-success">Want</button>
     <script type="text/javascript" charset="utf-8">
-           $('#want@index').on('click', function(e) { doNotWant($(this), '@{item.code}'); });
-       </script>
+       $('#want@index').on('click', function(e) { doNotWant($(this), '@{item.code}', @reload); });
+   </script>
     } else {
-    <buttion id="want@index" class="btn btn-primary">Want It</buttion>
+    <button id="want@index" class="btn btn-primary">Want It</button>
     <script type="text/javascript" charset="utf-8">
-           $('#want@index').on('click', function(e) { want($(this), '@{item.code}'); });
-       </script>
+       $('#want@index').on('click', function(e) { want($(this), '@{item.code}', @reload); });
+   </script>
     }
+
+    @if(item.haveUsers.exists(_.id == currentUser.id)) {
+    <button id="have@index" class="btn btn-success">Have</button>
+    <script type="text/javascript" charset="utf-8">
+       $('#have@index').on('click', function(e) { doNotHave($(this), '@{item.code}', @reload); });
+    </script>
+    } else {
+    <button id="have@index" class="btn btn-primary">Have It</button>
+    <script type="text/javascript" charset="utf-8">
+       $('#have@index').on('click', function(e) { have($(this), '@{item.code}', @reload); });
+    </script>
+    }
+
 </div>
