--- a/app/views/items/items.scala.html
+++ b/app/views/items/items.scala.html
@@ -1,9 +1,10 @@
-@(currentUserOpt: Option[User], items: Seq[Item])(implicit messagesProvider: MessagesProvider, flash: Flash, request: RequestHeader)
+@(currentUserOpt: Option[User], items: Seq[(Item, Option[Int])], reload: Boolean = false)(implicit messagesProvider: MessagesProvider, flash: Flash, request: RequestHeader)
+
 
 @if(items.nonEmpty) {
 <div class="row">
-    @for(i <- items.indices) {
-    @defining(items(i)){ item =>
+    @for(index <- items.indices) {
+    @defining(items(index)){ case (item, itemCount) =>
     <div class="item">
         <div class="col-md-3 col-sm-4 col-xs-12">
             <div class="panel panel-default">
@@ -11,18 +12,23 @@
                     <img src="@item.imageUrl">
                 </div>
                 <div class="panel-body">
-                    @* 追加する *@
-                    @if(currentUserOpt.isDefined && item.id.isDefined) {
+                    @if(item.id.isDefined) {
                     <p class="item-title"><a href="@routes.ItemsController.show(item.id.get)">@item.name</a></p>
                     } else {
                     <p class="item-title"><a href="@item.url">@item.name</a></p>
                     }
                     <div class="buttons text-center">
                         @if(currentUserOpt.isDefined) {
-                        @views.html.items.buttons(i, currentUserOpt.get, item)
+                        @views.html.items.buttons(index, currentUserOpt.get, item, reload)
                         }
                     </div>
                 </div>
+                @* 変更: カウント値があれば順位を表示する *@
+                @if(itemCount.isDefined) {
+                <div class="panel-footer">
+                    <p class="text-center">@{index + 1}位: @itemCount</p>
+                </div>
+                }
             </div>
         </div>
     </div>
